plugins {
  id 'org.springframework.boot' version '2.5.5'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.7'
  implementation 'org.springframework.boot:spring-boot-starter-security:2.6.7'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.7'
  implementation 'org.springframework.boot:spring-boot-starter-web:2.6.7'
  implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
  implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
  implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '4.4.0'
  compileOnly 'org.projectlombok:lombok:1.18.24'
  developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.7'
  runtimeOnly 'mysql:mysql-connector-java:8.0.29'
  runtimeOnly 'com.h2database:h2:1.4.200'
  annotationProcessor 'org.projectlombok:lombok:1.18.24'
  testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.7'
  testImplementation 'org.springframework.security:spring-security-test:5.6.3'
  testImplementation group: 'com.h2database', name: 'h2', version: '2.1.212'
}

test {
  useJUnitPlatform()
}
